[tool.poetry]
name = "k2dg-streamlit-app"
version = "0.1.0"
description = "A streamlit app for k2dg: allows interconversion of binding free energies and dissociation constants"
authors = ["Finlay Clark"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
k2dg = "^0.1.2"
streamlit = "^1.27.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
